"""Snapshot test for compare_all_methods' rich output (Lot 5,
PLAN_SOLIDITE_TECHNIQUE.md).

`compare_all_methods` returns a deeply nested comparison report (one entry
per voting method, each with a winner, regret, satisfaction figures, etc.).
Asserting on it field by field is either incomplete (only check the fields
someone thought to name) or extremely verbose (name every field, every
method, by hand). A snapshot captures the WHOLE structure once, reviewed by
a human at commit time (the diff on any future change is exactly what
changed, not a wall of new assertions to write).

Determinism: create_voter/create_candidate take a call-scoped RNG pair, so
each test below builds one from a fixed seed via `_seeded_rng_pair` before
construction -- the same seed always produces the same electorate, and
therefore the same report, which is the whole precondition for a snapshot
being meaningful rather than flaky.
"""
import copy
from functools import cache
from math import factorial
import random

import pytest

from api.engine.constants import DEFAULT_ISSUES
from api.engine.utils.demographic_data import _seeded_rng_pair
from api.engine.utils.simulation_metrics import RANKED_RULES, SCORE_RULES, compare_all_methods
from api.engine.utils.simulation_voting_utils import (
    create_candidate,
    create_voter,
    run_simulation,
)


def test_compare_all_methods_snapshot(snapshot):
    rng, np_rng = _seeded_rng_pair(20260911)
    issues = DEFAULT_ISSUES
    candidates = [
        create_candidate(issues, 0, "Alice", "Green", rng=rng),
        create_candidate(issues, 1, "Bob", "Conservative", rng=rng),
        create_candidate(issues, 2, "Carol", "Liberal", rng=rng),
    ]
    voters = [create_voter(issues, i, rng=rng, np_rng=np_rng) for i in range(15)]

    # Explicit opt-in: strategic_vulnerability is off by default now (it cost
    # 99.4% of a request and only two surfaces publish it), and this snapshot
    # exists to pin the FULL report, so it asks for the full report.
    report = compare_all_methods(voters, candidates, issues, compute_strategic=True)

    assert report == snapshot


# ── Tied electorates (issue #666, docs/plan/vote-app/LISTING_ORDER_TIES.md) ──
#
# The snapshot above is unanimous (every method elects Carol), so no tie-break can
# show in it. Here every voter has a mirror twin with Ann's and Ben's utilities
# swapped, so the two tie exactly and Cy trails. The invariant is only that the
# order the candidates are listed in does not change the result. The score rules draw
# an exact tie by lot (tie_lot.py, #667); the ranked rules still break one by name,
# `(-score, name)`, which the decided lot (LISTING_ORDER_TIES.md) is to replace.

_TIE_NAMES = ("Ann", "Ben", "Cy")
_MIRRORED = ((0.9, 0.6, 0.1), (0.8, 0.5, 0.3), (0.7, 0.2, 0.4), (1.0, 0.7, 0.0), (0.6, 0.4, 0.5))
# A voter with Ann == Ben: their own ranking of the two is a tie, which
# compare_all_methods orders by a lot seeded with the voter's id (#662).
_INDIFFERENT = (0.5, 0.5, 0.9)

_METHODS = sorted([*RANKED_RULES, *SCORE_RULES, "evaluative", "quadratic", "random_ballot"])

# On the exact two-way tie these return no winner at all, where the invariant wants a
# lot. Pinned so that a change shows; no issue tracks it yet.
_NO_WINNER_ON_A_FULL_TIE = {"coombs", "irv"}


@cache
def _tied_methods(order: tuple[str, ...], indifferent: bool = False, blank: bool = False) -> dict:
    """compare_all_methods on the tied electorate, the candidates and every voter's
    utilities listed in `order`. Cached: the tests below only read it."""
    rows = [(ann, ben, cy) for a, b, cy in _MIRRORED for ann, ben in ((a, b), (b, a))]
    if indifferent:
        rows.append(_INDIFFERENT)
    util = {
        v: {n: dict(zip(_TIE_NAMES, row))[n] for n in order} for v, row in enumerate(rows)
    }
    report = compare_all_methods(
        [{"id": v} for v in util], [{"name": n} for n in order], [], override_utilities=util,
        blank_vote=blank,
    )
    return report["methods"]


def test_compare_all_methods_snapshot_on_a_tied_electorate(snapshot):
    assert copy.deepcopy(_tied_methods(_TIE_NAMES)) == snapshot


def test_the_tie_tests_cover_every_method():
    assert set(_METHODS) == set(_tied_methods(_TIE_NAMES))
    assert _NO_WINNER_ON_A_FULL_TIE <= set(_METHODS)


# On this electorate no voter has a tie of their own, so the ranked rules receive the same
# rankings in both orders: their cases here only guard the report around them. Listing
# order reaches a ranked rule through the ties inside a voter's ranking, which is what the
# indifferent-voter test below exercises.
@pytest.mark.parametrize("method", _METHODS)
def test_a_tie_does_not_follow_listing_order(method):
    """Reversing the candidates, and the order of every voter's utilities, must not
    change a method's result."""
    forward = _tied_methods(_TIE_NAMES)[method]
    assert (forward["winner"] is None) == (method in _NO_WINNER_ON_A_FULL_TIE)
    assert forward == _tied_methods(_TIE_NAMES[::-1])[method]


def test_an_indifferent_voter_does_not_make_the_result_follow_listing_order():
    """One voter with Ann == Ben. That voter's ranking of the two used to follow the
    listing order, and with it 21 ranked winners and the Condorcet winner (so every
    method's `condorcet_consistent`); a lot seeded with the voter's id orders it now
    (#662). The score rules are left out: they read utilities, and their ties are
    #667's, tested above."""
    def ranked_side(order):
        methods = _tied_methods(order, True)
        return {m: e for m, e in methods.items() if m not in SCORE_RULES}

    assert ranked_side(_TIE_NAMES) == ranked_side(_TIE_NAMES[::-1])


def test_with_blank_votes_an_indifferent_voter_does_not_follow_listing_order_either():
    """The blank-vote path splices the blank candidate into the same per-voter rankings."""
    def ranked_side(order):
        methods = _tied_methods(order, True, True)
        return {m: e for m, e in methods.items() if m not in SCORE_RULES}

    assert ranked_side(_TIE_NAMES) == ranked_side(_TIE_NAMES[::-1])


def test_the_default_report_omits_strategic_vulnerability():
    """The shape every caller that does not opt in now gets. Nothing pinned it
    before, so a site silently losing (or regaining) the 30-second metric was
    invisible to the suite."""
    rng, np_rng = _seeded_rng_pair(20260911)
    issues = DEFAULT_ISSUES
    candidates = [
        create_candidate(issues, 0, "Alice", "Green", rng=rng),
        create_candidate(issues, 1, "Bob", "Conservative", rng=rng),
        create_candidate(issues, 2, "Carol", "Liberal", rng=rng),
    ]
    voters = [create_voter(issues, i, rng=rng, np_rng=np_rng) for i in range(15)]

    off = compare_all_methods(voters, candidates, issues)
    on = compare_all_methods(voters, candidates, issues, compute_strategic=True)

    assert off["methods"], "the default must still run every method"
    assert set(off["methods"]) == set(on["methods"])
    # Winners are unaffected -- the flag governs one metric, not the outcome.
    assert {m: d.get("winner") for m, d in off["methods"].items()} == \
           {m: d.get("winner") for m, d in on["methods"].items()}
    # random_ballot hardcodes its own 0.0 outside the gate, so it is excluded.
    gated = [m for m in off["methods"] if m != "random_ballot"]
    assert all(off["methods"][m].get("strategic_vulnerability") is None for m in gated)
    assert any(on["methods"][m].get("strategic_vulnerability") is not None for m in gated)


def test_strategic_vulnerability_samples_above_the_permutation_cap():
    """Both branches of the permutation budget.

    With 4 candidates 4! = 24 <= the cap, so every permutation is tried
    exhaustively; with 6, 720 > 100 and it samples. The sampled branch is the
    one that used to call `list(permutations(...))` and build 40,320 tuples at
    8 candidates just to keep 100 of them."""
    issues = DEFAULT_ISSUES
    for n_cands, exhaustive in ((4, True), (6, False)):
        rng, np_rng = _seeded_rng_pair(7)
        candidates = [
            create_candidate(issues, i, f"C{i}", "Party", rng=rng) for i in range(n_cands)
        ]
        voters = [create_voter(issues, i, rng=rng, np_rng=np_rng) for i in range(20)]
        report = compare_all_methods(voters, candidates, issues, compute_strategic=True)

        assert factorial(n_cands) <= 100 if exhaustive else factorial(n_cands) > 100
        svs = [
            md["strategic_vulnerability"]
            for m, md in report["methods"].items()
            if m != "random_ballot" and md.get("strategic_vulnerability") is not None
        ]
        assert svs, f"no method reported a vulnerability at {n_cands} candidates"
        assert all(0.0 <= v <= 1.0 for v in svs), svs


def test_majority_judgment_and_evaluative_can_be_manipulated():
    """Both used to report strategic_vulnerability 0.0 on every electorate: the
    metric re-runs a rule on manipulated ballots, and these two were handed a
    stub returning their sincere winner whatever it was given. The playground's
    Stratégie panel then ranked them the most resistant methods of all.

    The witnesses are counted here with the rules themselves, not through the
    metric: a sampled voter who, bullet-grading one candidate (1.0, everyone
    else 0.0) instead of reporting their utilities, changes the winner to
    someone they prefer. The metric is that count over the sample -- exactly,
    so feeding it the wrong ballots, the wrong rule or a double vote fails."""
    from api.engine.utils.simulation_metrics import _STRATEGIC_SAMPLE
    from api.engine.utils.simulation_score_utils import (
        get_evaluative_winner, get_majority_judgment_winner,
    )

    rng = random.Random(2)
    names = ["C0", "C1", "C2", "C3", "C4"]
    util = {i: {n: round(rng.random(), 3) for n in names} for i in range(21)}
    report = compare_all_methods(
        [{"id": v} for v in util], [{"name": n} for n in names], [],
        override_utilities=util, compute_strategic=True,
    )
    ballots = [util[v].copy() for v in util]

    for rule, method in ((get_majority_judgment_winner, "majority_judgment"),
                         (get_evaluative_winner, "evaluative")):
        sincere = rule(ballots)["winner"]
        manipulators = sum(
            any(
                (w := rule(ballots[:i] + [{n: float(n == pick) for n in names}]
                           + ballots[i + 1:])["winner"])
                and w != sincere and util[i][w] > util[i][sincere]
                for pick in names
            )
            for i in range(_STRATEGIC_SAMPLE)
        )
        assert manipulators, f"{method}: this profile has no manipulation to find"
        assert report["methods"][method]["strategic_vulnerability"] == round(
            manipulators / _STRATEGIC_SAMPLE, 4
        ), method


def test_strategic_vulnerability_does_not_depend_on_the_global_rng():
    """Above 5! permutations the ranked metric samples manipulations. It drew
    them from the process-wide `random`, so the same electorate measured
    differently per process -- Black read 0.8 in one run and 0.7333 in the
    next, same input. Two different global states must now agree."""
    rng = random.Random(8)
    names = [f"C{i}" for i in range(5)]           # 5! = 120 > the 100 cap
    util = {i: {n: round(rng.random(), 3) for n in names} for i in range(21)}

    def run(global_seed):
        random.seed(global_seed)
        report = compare_all_methods(
            [{"id": v} for v in util], [{"name": n} for n in names], [],
            override_utilities=util, compute_strategic=True,
        )
        return {m: md["strategic_vulnerability"] for m, md in report["methods"].items()}

    assert run(1) == run(2)


# ── run_simulation (pure function, no HTTP route) ──



def test_run_simulation_returns_one_ballot_record_per_voter():
    """run_simulation (the plain single-shot engine helper, distinct from the
    polity run_simulation) builds a fixed party cycle for its candidates and
    returns one {voter, vote, utilities} record per voter, utilities keyed
    by every candidate name."""
    results = run_simulation(num_voters=20, num_candidates=3, method="plurality", seed=42)

    assert len(results) == 20
    expected_candidates = {"Candidate 1", "Candidate 2", "Candidate 3"}
    for record in results:
        assert set(record.keys()) == {"voter", "vote", "utilities"}
        assert set(record["utilities"]) == expected_candidates
