# serializer version: 1
# name: test_compare_all_methods_snapshot
  dict({
    'condorcet_winner': 'Carol',
    'methods': dict({
      'anti_plurality': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'approval': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'baldwin': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'benham': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'black': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'borda': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'bucklin': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'coombs': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'copeland': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'cumulative': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'dowdall': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'evaluative': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'ev_distribution': dict({
          'Alice': dict({
            '+1': 0,
            '-1': 5,
            '0': 10,
          }),
          'Bob': dict({
            '+1': 0,
            '-1': 12,
            '0': 3,
          }),
          'Carol': dict({
            '+1': 7,
            '-1': 0,
            '0': 8,
          }),
        }),
        'ev_scores': dict({
          'Alice': -5,
          'Bob': -12,
          'Carol': 7,
        }),
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'irv': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'kemeny_young': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'kemeny_exact': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'majority_judgment': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'mj_grade_distributions': dict({
          'Alice': list([
            2,
            3,
            8,
            2,
            0,
            0,
          ]),
          'Bob': list([
            10,
            2,
            3,
            0,
            0,
            0,
          ]),
          'Carol': list([
            0,
            0,
            0,
            8,
            6,
            1,
          ]),
        }),
        'mj_grades': dict({
          'Alice': dict({
            'Assez Bien': 8,
            'Bien': 2,
            'Excellent': 0,
            'Passable': 3,
            'Très Bien': 0,
            'À Rejeter': 2,
          }),
          'Bob': dict({
            'Assez Bien': 3,
            'Bien': 0,
            'Excellent': 0,
            'Passable': 2,
            'Très Bien': 0,
            'À Rejeter': 10,
          }),
          'Carol': dict({
            'Assez Bien': 0,
            'Bien': 8,
            'Excellent': 1,
            'Passable': 0,
            'Très Bien': 6,
            'À Rejeter': 0,
          }),
        }),
        'mj_medians': dict({
          'Alice': 'Assez Bien',
          'Bob': 'À Rejeter',
          'Carol': 'Bien',
        }),
        'mj_scores': dict({
          'Alice': 1.6667,
          'Bob': 0.5333,
          'Carol': 3.5333,
        }),
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'maximin': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'mean_median_hybrid': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'median_voting': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'minimax': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'nanson': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'nash': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'plurality': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'quadratic': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'qv_credit_distribution': dict({
          'Alice': 25.733,
          'Bob': 9.4,
          'Carol': 63.133,
        }),
        'qv_credits_used': 98.27,
        'qv_scores': dict({
          'Alice': 74.0,
          'Bob': 37.0,
          'Carol': 119.0,
        }),
        'strategic_vulnerability': None,
        'winner': 'Carol',
      }),
      'random_ballot': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'rb_probabilities': dict({
          'Carol': 1.0,
        }),
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'ranked_pairs': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'raynaud': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'river': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'schulze': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'simple_score': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'smith_irv': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'split_cycle': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'star_voting': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'two_round': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
      'variance_based': dict({
        'bayesian_regret': 0.0,
        'condorcet_consistent': True,
        'majority_satisfaction': 1.0,
        'strategic_vulnerability': 0.0,
        'winner': 'Carol',
      }),
    }),
  })
# ---
# name: test_compare_all_methods_snapshot_on_a_tied_electorate
  dict({
    'anti_plurality': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'approval': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'baldwin': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'benham': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'black': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'borda': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'bucklin': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'coombs': dict({
      'bayesian_regret': None,
      'condorcet_consistent': None,
      'majority_satisfaction': None,
      'strategic_vulnerability': None,
      'winner': None,
    }),
    'copeland': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'cumulative': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ben',
    }),
    'dowdall': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'evaluative': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'ev_distribution': dict({
        'Ann': dict({
          '+1': 5,
          '-1': 1,
          '0': 4,
        }),
        'Ben': dict({
          '+1': 5,
          '-1': 1,
          '0': 4,
        }),
        'Cy': dict({
          '+1': 0,
          '-1': 6,
          '0': 4,
        }),
      }),
      'ev_scores': dict({
        'Ann': 4,
        'Ben': 4,
        'Cy': -6,
      }),
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'irv': dict({
      'bayesian_regret': None,
      'condorcet_consistent': None,
      'majority_satisfaction': None,
      'strategic_vulnerability': None,
      'winner': None,
    }),
    'kemeny_young': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'kemeny_exact': True,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'majority_judgment': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'mj_grade_distributions': dict({
        'Ann': list([
          0,
          1,
          1,
          3,
          3,
          2,
        ]),
        'Ben': list([
          0,
          1,
          1,
          3,
          3,
          2,
        ]),
        'Cy': list([
          4,
          2,
          2,
          2,
          0,
          0,
        ]),
      }),
      'mj_grades': dict({
        'Ann': dict({
          'Assez Bien': 1,
          'Bien': 3,
          'Excellent': 2,
          'Passable': 1,
          'Très Bien': 3,
          'À Rejeter': 0,
        }),
        'Ben': dict({
          'Assez Bien': 1,
          'Bien': 3,
          'Excellent': 2,
          'Passable': 1,
          'Très Bien': 3,
          'À Rejeter': 0,
        }),
        'Cy': dict({
          'Assez Bien': 2,
          'Bien': 2,
          'Excellent': 0,
          'Passable': 2,
          'Très Bien': 0,
          'À Rejeter': 4,
        }),
      }),
      'mj_medians': dict({
        'Ann': 'Bien',
        'Ben': 'Bien',
        'Cy': 'Passable',
      }),
      'mj_scores': dict({
        'Ann': 3.4,
        'Ben': 3.4,
        'Cy': 1.2,
      }),
      'strategic_vulnerability': None,
      'winner': 'Ben',
    }),
    'maximin': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ben',
    }),
    'mean_median_hybrid': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ben',
    }),
    'median_voting': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ben',
    }),
    'minimax': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'nanson': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'nash': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ben',
    }),
    'plurality': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'quadratic': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'qv_credit_distribution': dict({
        'Ann': 42.5,
        'Ben': 42.5,
        'Cy': 13.6,
      }),
      'qv_credits_used': 98.6,
      'qv_scores': dict({
        'Ann': 63.0,
        'Ben': 63.0,
        'Cy': 32.0,
      }),
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'random_ballot': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'rb_probabilities': dict({
        'Ann': 0.5,
        'Ben': 0.5,
      }),
      'strategic_vulnerability': 0.0,
      'winner': 'Ann',
    }),
    'ranked_pairs': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'raynaud': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'river': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'schulze': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'simple_score': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ben',
    }),
    'smith_irv': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'split_cycle': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'star_voting': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ben',
    }),
    'two_round': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ann',
    }),
    'variance_based': dict({
      'bayesian_regret': 0.16,
      'condorcet_consistent': None,
      'majority_satisfaction': 0.5,
      'strategic_vulnerability': None,
      'winner': 'Ben',
    }),
  })
# ---
